--- a/cc-web/src/main/web/src/app/app.component.html
+++ b/cc-web/src/main/web/src/app/app.component.html
@@ -1,7 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to App
-  </h1>
+<div>
+    <app-header></app-header>
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
 </div>
-
