--- a/cc-web/src/main/web/src/app/footer/footer.component.html
+++ b/cc-web/src/main/web/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;margin-bottom: 2%">
-    <a class="navbar-brand brand-custom" href="#">Corporate Classifieds</a>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;margin-top: 5%">
+    <a class="navbar-brand brand-custom" href="#">@ 2019 CC, Inc</a>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto">
             <!-- <li class="nav-item">
