--- a/cc-web/src/main/web/src/app/home/home.component.html
+++ b/cc-web/src/main/web/src/app/home/home.component.html
@@ -1,3 +1,51 @@
-<p>
-  home works!
-</p>
+<div id="container">
+  <div id="inner">
+
+    <div class="child">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <button type="button" class="btn btn-primary">Login</button>
+    </div>
+
+    <div class="child-2">
+      <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input type="text" class="form-control" id="firstName" placeholder="Enter First Name">
+      </div>
+
+      <div class="form-group">
+        <label for="lastName">Last Name</label>
+        <input type="email" class="form-control" id="lastName" placeholder="Enter Last Name">
+      </div>
+
+      <div class="form-group">
+        <label for="corpemail">Corporate Email</label>
+        <input type="email" class="form-control" id="corpemail" placeholder="Enter Corporate email">
+      </div>
+
+      <div class="form-group">
+        <label for="personalEmail">Personal Email</label>
+        <input type="email" class="form-control" id="personalEmail" placeholder="Enter Personal Email">
+      </div>
+
+      <div class="form-group">
+        <label for="pwd">Password</label>
+        <input type="password" class="form-control" id="pwd" placeholder="Password">
+      </div>
+
+      <div class="form-group">
+        <label for="repwd">ReType Password</label>
+        <input type="password" class="form-control" id="repwd" placeholder="Re-Type Password">
+      </div>
+      <button type="button" class="btn btn-primary">SignUp</button>
+    </div>
+
+  </div>
+</div>
