--- a/cc-web/src/main/web/src/app/home/home.component.html
+++ b/cc-web/src/main/web/src/app/home/home.component.html
@@ -2,16 +2,18 @@
   <div id="inner">
 
     <div class="child">
+
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <input [(ngModel)]="user.userName" type="email" class="form-control" id="exampleInputEmail1" name="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input [(ngModel)]="user.password" type="password" class="form-control" id="exampleInputPassword1"  name="exampleInputPassword1" placeholder="Password">
       </div>
-      <button type="button" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary" (click)="login()">Login</button>
+
     </div>
 
     <div class="child-2">
@@ -44,7 +46,7 @@
         <label for="repwd">ReType Password</label>
         <input type="password" class="form-control" id="repwd" placeholder="Re-Type Password">
       </div>
-      <button type="button" class="btn btn-primary">SignUp</button>
+      <button type="button" class="btn btn-primary" (click)="signup()">SignUp</button>
     </div>
 
   </div>
