--- a/cc-web/src/main/web/src/app/user/user.component.html
+++ b/cc-web/src/main/web/src/app/user/user.component.html
@@ -3,14 +3,21 @@
 
     <div class="child">
 
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input [(ngModel)]="user.userName" type="email" class="form-control" id="exampleInputEmail1" name="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <div class="form-group required">
+        <label for="exampleInputEmail1" class="control-label">Email address</label>
+        <input [(ngModel)]="loginUser.userName" 
+        type="email" 
+        class="form-control" 
+        id="exampleInputEmail1"
+        name="exampleInputEmail1"
+        aria-describedby="emailHelp" 
+        placeholder="Enter email"
+        >
         <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
-        <input [(ngModel)]="user.password" type="password" class="form-control" id="exampleInputPassword1"  name="exampleInputPassword1" placeholder="Password">
+        <input [(ngModel)]="loginUser.password" type="password" class="form-control" id="exampleInputPassword1"  name="exampleInputPassword1" placeholder="Password">
       </div>
       <button type="submit" class="btn btn-primary" (click)="login()">Login</button>
 
@@ -19,34 +26,34 @@
     <div class="child-2">
       <div class="form-group">
         <label for="firstName">First Name</label>
-        <input type="text" class="form-control" id="firstName" placeholder="Enter First Name">
+        <input type="text" [(ngModel)]="registerUser.firstName" class="form-control" id="firstName" placeholder="Enter First Name">
       </div>
 
       <div class="form-group">
         <label for="lastName">Last Name</label>
-        <input type="email" class="form-control" id="lastName" placeholder="Enter Last Name">
+        <input type="text" [(ngModel)]="registerUser.lastName" class="form-control" id="lastName" placeholder="Enter Last Name">
       </div>
 
       <div class="form-group">
         <label for="corpemail">Corporate Email</label>
-        <input type="email" class="form-control" id="corpemail" placeholder="Enter Corporate email">
+        <input type="email" [(ngModel)]="registerUser.corpEmail" class="form-control" id="corpemail" placeholder="Enter Corporate email">
       </div>
 
       <div class="form-group">
         <label for="personalEmail">Personal Email</label>
-        <input type="email" class="form-control" id="personalEmail" placeholder="Enter Personal Email">
+        <input type="email" [(ngModel)]="registerUser.personalEmail" class="form-control" id="personalEmail" placeholder="Enter Personal Email">
       </div>
 
       <div class="form-group">
         <label for="pwd">Password</label>
-        <input type="password" class="form-control" id="pwd" placeholder="Password">
+        <input type="password" [(ngModel)]="registerUser.password" class="form-control" id="pwd" placeholder="Password">
       </div>
 
       <div class="form-group">
         <label for="repwd">ReType Password</label>
-        <input type="password" class="form-control" id="repwd" placeholder="Re-Type Password">
+        <input type="password" [(ngModel)]="registerUser.password" class="form-control" id="repwd" placeholder="Re-Type Password">
       </div>
-      <button type="button" class="btn btn-primary" (click)="signup()">SignUp</button>
+      <button type="button" class="btn btn-primary" (click)="register()">SignUp</button>
     </div>
 
   </div>
